# ddos-detection

./: AUTHORS  Legal.txt  License.txt  README.md  base.py  create_features.py  csv2sqlite.py  ddos_event_2nd.py  dst_volume.py  entropyOverTime.py  entropy_ft.py  features_two.py  nfdumpFields.txt  nfreader.py  plot_over_time.py  syn_attack_detector_v1.py  volume_detector.py
build_database/: csv2sql_ft.py  csv2sqlite.py  extract.sh  ftFields.txt  nfTocsv.py
characterization/: features_three.py  features_two.py
detection_framework/: README  backup_tests.py  config.ini  config.txt  configobj.py  create_config.py  demo_log.txt  demo_synvol.py  det_ddos_synvol.py  detection_files.py  detection_main.py  detection_main_alt.py  detection_stream.py  detection_tests.py  dns_test.py  ent_comb.py  entropy_test.py  entropy_test_final.py  expiringdict.py  globals.py  interruptable_thread.py  netflow_classes.py  ordered_copy.py  random_copy.py  regularity.py  req_rsp.py  req_rsp_backup.py  request_test.py  response_test.py  test_log.txt  wavelet_test.py
dot/: setup.cfg  setup.py
dot/dot/: .manager.py.swp  cfg.py  fields.py  log.py  manager.py  tcp_syn_flooding_detector.py  test.py  test_args.py  utils.py
dot/dot/base/: .app_manager.py.swp  app_manager.py  test.py
dot/dot/controller/: .controller.py.swp  controller.py  event.py  handler.py  nf_event.py
dot/dot/lib/: .hub.py.swp  hub.py
dot/dot/test/: test_cls_module.py  test_dir.py  test_event.py  test_finally.py  test_inotify.py  test_pyinotify.py  test_ryu_manager.py  test_spawn.py  test_thread.py
ts/: setup.cfg  (+1 more)
(+60 files in other folders)
