[metadata]
name = dot
summmary = Application module based DDoS Detection Framework
license = MIT
author = LBNL
description-file = README.rst
classifier = 
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Operating System :: Unix

[files]
packages = 
    dot

